wip: Implementing raft controller - Implemented log request handling and tests